# MVP

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
api/: webcam.py
api_server/: main.py  requirements.txt
api_server/api/: webcam.py
api_server/common/: constant.py  models.py
api_server/util/: error_handling.py  opencv_webcam.py  test.py
common/: constant.py
gui/: base.py
util/: opencv_webcam.py
