[tool.poetry]
name = "realtime-cam-demo"
version = "0.1.0"
description = "Good cleaning hand mirror MVP application build"
authors = ["1eejuhwany <LeeJuHwan@github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.1"
uvicorn = "^0.23.1"
sqlalchemy = "^2.0.19"
opencv-python = ">=4.1.1"
pillow = ">=7.1.2"
torch = ">=1.7.0"
pandas = ">=1.1.4"
requests = ">=2.23.0"
gitpython = ">=3.1.30"
matplotlib = ">=3.3"
numpy = ">=1.18.5"
psutil = "^5.9.5"
pyyaml = ">=5.3.1"
scipy = ">=1.4.1"
thop = ">=0.1.1"
torchvision = ">=0.8.1"
tqdm = ">=4.64.0"
ultralytics = ">=8.0.111"
seaborn = ">=0.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
